# pipeline-watch

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  Makefile  README.md  findings.json  pyproject.toml  requirements-dev.in  requirements.in
.github/workflows/: ci.yml  codeql.yml
pipeline_watch/: __init__.py  cli.py  suppressions.py  suppressions.schema.json
pipeline_watch/baseline/: stats.py  store.py
pipeline_watch/detectors/: supply_chain.py
pipeline_watch/output/: formatter.py  html.py  sarif.py  schema.py
pipeline_watch/providers/: github.py  npm.py  pypi.py
scripts/: generate_example_findings.py
tests/: conftest.py  test_baseline_stats.py  test_baseline_store.py  test_cli.py  test_cli_extra.py  test_coverage_gaps.py  test_github_provider.py  test_npm_provider.py  test_output_extra.py  test_output_schema.py  test_provider_edges.py  test_pypi_provider.py  test_sarif.py  test_supply_chain.py  test_suppressions.py
tests/fixtures/pypi/: requests_v1.json
