[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline_watch"
version = "0.1.0"
description = "Runtime behavioral detection for software supply chain anomalies — the dynamic companion to pipeline-check"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Daniel Martin" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1.0",
    "Levenshtein>=0.25.0",
    "rich>=13.0.0",
]

[project.scripts]
pipeline_watch = "pipeline_watch.cli:main"

[project.urls]
Homepage = "https://github.com/dmartinochoa/pipeline-watch"
Repository = "https://github.com/dmartinochoa/pipeline-watch"
Issues = "https://github.com/dmartinochoa/pipeline-watch/issues"

[tool.setuptools.packages.find]
include = ["pipeline_watch*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
